Revert "Fix fretboard colors in dark mode"
This reverts commit d30ac14ad2d342d0b266c8b3f045c9411e502213.

--- a/apps/fretboard-diagram-creator/fretboard.css
+++ b/apps/fretboard-diagram-creator/fretboard.css
@@ -3,7 +3,7 @@ g.note.transparent:hover {
 }
 
 g.note {
-    fill: transparent;
+    fill: white;
     stroke-width: 1px;
     stroke: black;
 }
@@ -24,7 +24,7 @@ g.note.transparent {
 
 g.note.visible {
     opacity: 1;
-    fill: transparent;
+    fill: white;
 }
 
 g.note.blue {
